--- a/style.css
+++ b/style.css
@@ -208,3 +208,20 @@ img {
   top: -12px;
   font-size: var(--small-font-size);
 }
+
+/* breakpoints */
+/* for medium devices */
+
+@media screen and (min-width: 576px) {
+  .login {
+    justify-content: center;
+  }
+  .login__form {
+    width: 432px;
+    padding: 4rem 3rem 3.5rem;
+  }
+
+  .login__title {
+    font-size: 2rem;
+  }
+}
